Fix warnings in benchmarks project

--- a/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
+++ b/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
@@ -12,6 +12,7 @@
     <AssemblyOriginatorKeyFile>..\..\Datadog.Trace.snk</AssemblyOriginatorKeyFile>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <DelaySign>false</DelaySign>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
