--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -29,25 +29,19 @@ resources:
       DD_APM_ENABLED: true
       DD_APM_NON_LOCAL_TRAFFIC: true
   - container: dd_agent_dev_windows
-    image: datadog/agent-dev:master-py3-win
+    image: datadog/agent-dev:olivielpeau-ci-container-defaults-py3-win1809
     ports:
     - 8126:8126
     env:
       DD_API_KEY: $(ddApiKey)
-      DD_REMOVE_DEFAULT_CHECKS: true
-      DD_HOSTNAME: none
-      DD_APM_ENABLED: true
-      DD_APM_NON_LOCAL_TRAFFIC: true
+      DD_INSIDE_CI: true
   - container: dd_agent_dev_linux
-    image: datadog/agent-dev:master
+    image: datadog/agent-dev:olivielpeau-ci-container-defaults-py3
     ports:
     - 8126:8126
     env:
       DD_API_KEY: $(ddApiKey)
-      DD_REMOVE_DEFAULT_CHECKS: true
-      DD_HOSTNAME: none
-      DD_APM_ENABLED: true
-      DD_APM_NON_LOCAL_TRAFFIC: true
+      DD_INSIDE_CI: true
 
 jobs:
 
