Make sure to clean the workspace

--- a/.azure-pipelines/benchmarks.yml
+++ b/.azure-pipelines/benchmarks.yml
@@ -18,6 +18,9 @@ stages:
 
   - job: Windows
     pool: Benchmarks
+    
+    workspace:
+        clean: all
 
     variables:
       tracerHomeName: windows-tracer-home
