--- a/src/Datadog.Trace.ServiceFabric.Remoting/Datadog.Trace.ServiceFabric.Remoting.csproj
+++ b/src/Datadog.Trace.ServiceFabric.Remoting/Datadog.Trace.ServiceFabric.Remoting.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <RootNamespace>Datadog.Trace</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
