--- a/src/Datadog.Trace.ServiceFabric.Remoting/Datadog.Trace.ServiceFabric.Remoting.csproj
+++ b/src/Datadog.Trace.ServiceFabric.Remoting/Datadog.Trace.ServiceFabric.Remoting.csproj
@@ -4,7 +4,15 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <RootNamespace>Datadog.Trace</RootNamespace>
     <Nullable>enable</Nullable>
+
+    <!-- NuGet -->
+    <Version>0.1.0-alpha1</Version>
+    <Title>Datadog APM</Title>
+    <Description>Service Remoting instrumentation for Datadog APM</Description>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="4.0.470" />
@@ -13,7 +21,5 @@
   <ItemGroup>
     <ProjectReference Include="..\Datadog.Trace\Datadog.Trace.csproj" />
   </ItemGroup>
-
-
 
 </Project>
