only build for x64

--- a/src/Datadog.Trace.ServiceFabric.Remoting/Datadog.Trace.ServiceFabric.Remoting.csproj
+++ b/src/Datadog.Trace.ServiceFabric.Remoting/Datadog.Trace.ServiceFabric.Remoting.csproj
@@ -5,6 +5,9 @@
     <RootNamespace>Datadog.Trace</RootNamespace>
     <Nullable>enable</Nullable>
 
+    <!-- Microsoft.ServiceFabric.Services.Remoting only supports x64 -->
+    <Platforms>x64</Platforms>
+
     <!-- NuGet -->
     <Version>0.1.0-alpha1</Version>
     <Title>Datadog APM</Title>
