--- a/src/Datadog.Trace.ServiceFabric.Remoting/Datadog.Trace.ServiceFabric.csproj
+++ b/src/Datadog.Trace.ServiceFabric.Remoting/Datadog.Trace.ServiceFabric.csproj
@@ -13,11 +13,16 @@
     <Description>Service Remoting instrumentation for Datadog APM</Description>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <InternalsAssemblyNames>Datadog.Trace</InternalsAssemblyNames>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="IgnoresAccessChecksToAttribute.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="4.0.470" />
+    <PackageReference Include="IgnoresAccessChecksToGenerator" Version="0.4.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
