--- a/src/Datadog.Trace.ClrProfiler.Native/Datadog.Trace.ClrProfiler.Native.vcxproj
+++ b/src/Datadog.Trace.ClrProfiler.Native/Datadog.Trace.ClrProfiler.Native.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="miniutfdata.h" />
     <ClInclude Include="module_metadata.h" />
     <ClInclude Include="pal.h" />
+    <ClInclude Include="rejit_handler.h" />
     <ClInclude Include="sig_helpers.h" />
     <ClInclude Include="string.h" />
     <ClInclude Include="util.h" />
@@ -219,6 +220,7 @@
     <ClCompile Include="logging.cpp" />
     <ClCompile Include="metadata_builder.cpp" />
     <ClCompile Include="miniutf.cpp" />
+    <ClCompile Include="rejit_handler.cpp" />
     <ClCompile Include="sig_helpers.cpp" />
     <ClCompile Include="string.cpp" />
     <ClCompile Include="util.cpp" />
