Fixes unit test pipeline

--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -104,7 +104,7 @@ jobs:
 
   # Enable the Datadog Agent service for this job
   services:
-    dd_agent: dd_agent_dev_windows
+    dd_agent: dd_agent
 
   steps:
 
