--- a/src/Datadog.Trace.DuckTyping/Datadog.Trace.DuckTyping.csproj
+++ b/src/Datadog.Trace.DuckTyping/Datadog.Trace.DuckTyping.csproj
@@ -5,6 +5,11 @@
     <Version>1.19.3</Version>
     <Title>Datadog APM</Title>
     <Description>DuckType library for Datadog APM</Description>
+
+    <!-- Allow the GenerateAssemblyInfo task in the .NET SDK to generate all
+         assembly attributes except for the AssemblyVersionAttribute. This will
+         be locked at Major.0.0.0 and is defined in AssemblyInfo.cs -->
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
   </PropertyGroup>
 
   <!-- For VS testing purposes only, copy all implementation assemblies to the
