--- a/src/Datadog.Trace.Tools.Runner/Datadog.Trace.Tools.Runner.Tool.csproj
+++ b/src/Datadog.Trace.Tools.Runner/Datadog.Trace.Tools.Runner.Tool.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <None Include="..\..\docker\linux-build.dockerfile" Link="linux-build.dockerfile" />
+    <None Include="..\..\build\docker\linux-build.dockerfile" Link="linux-build.dockerfile" />
     <None Include="Datadog.Trace.Tools.Runner.proj" />
   </ItemGroup>
   
