--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -38,7 +38,9 @@ jobs:
   - task: UseDotNet@2
     displayName: install dotnet core sdk 5
     inputs:
+      packageType: sdk
       version: $(dotnetCoreSdk5Version)
+      includePreviewVersions: true
 
   - task: DotNetCoreCLI@2
     displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
@@ -262,6 +264,7 @@ jobs:
     inputs:
       packageType: sdk
       version: $(dotnetCoreSdk5Version)
+      includePreviewVersions: true
       
   - task: NuGetToolInstaller@1
     displayName: install nuget
@@ -376,6 +379,7 @@ jobs:
     inputs:
       packageType: sdk
       version: $(dotnetCoreSdk5Version)
+      includePreviewVersions: true
 
   - task: NuGetToolInstaller@1
     displayName: install nuget
