Fix build target for .net core samples

--- a/test/test-applications/integrations/Samples.Elasticsearch/Samples.Elasticsearch.csproj
+++ b/test/test-applications/integrations/Samples.Elasticsearch/Samples.Elasticsearch.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="NEST" Version="$(ApiVersion)" />
   </ItemGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('netcoreapp'))">
+  <ItemGroup Condition="!$(TargetFramework.StartsWith('net4'))">
     <PackageReference Include="System.Net.Primitives" Version="4.3.0" />
   </ItemGroup>
 
