Fixes compilation error WIP

--- a/src/Datadog.Trace.ClrProfiler.Native/Datadog.Trace.ClrProfiler.Native.vcxproj
+++ b/src/Datadog.Trace.ClrProfiler.Native/Datadog.Trace.ClrProfiler.Native.vcxproj
@@ -191,7 +191,6 @@
     <ClInclude Include="cor_profiler_base.h" />
     <ClInclude Include="dd_profiler_constants.h" />
     <ClInclude Include="environment_variables.h" />
-    <ClInclude Include="calltarget_tokens.cpp" />
     <ClInclude Include="il_rewriter.h" />
     <ClInclude Include="il_rewriter_wrapper.h" />
     <ClInclude Include="integration.h" />
@@ -211,6 +210,7 @@
     <ClInclude Include="version.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="calltarget_tokens.cpp" />
     <ClCompile Include="class_factory.cpp" />
     <ClCompile Include="clr_helpers.cpp" />
     <ClCompile Include="cor_profiler_base.cpp" />
