--- a/test/test-applications/integrations/Samples.Microsoft.Data.SqlClient/Samples.Microsoft.Data.SqlClient.csproj
+++ b/test/test-applications/integrations/Samples.Microsoft.Data.SqlClient/Samples.Microsoft.Data.SqlClient.csproj
@@ -10,6 +10,8 @@
     <!-- Required to build multiple projects with the same Configuration|Platform -->
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+
+     <LoadManagedProfilerFromProfilerDirectory>true</LoadManagedProfilerFromProfilerDirectory>
   </PropertyGroup>
 
   <ItemGroup>
