--- a/test/test-applications/calltarget/CallTargetNativeTest/CallTargetNativeTest.csproj
+++ b/test/test-applications/calltarget/CallTargetNativeTest/CallTargetNativeTest.csproj
@@ -6,4 +6,10 @@
 	<LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="integrations.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
