Fixes the linux compilation.

--- a/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
+++ b/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
@@ -62,7 +62,7 @@ target_include_directories("Datadog.Trace.ClrProfiler.Native.static"
 )
 target_link_libraries("Datadog.Trace.ClrProfiler.Native.static"
     /opt/re2/obj/libre2.a
-    ${CMAKE_SOURCE_DIR}/lib/fmt_x64-linux/lib/libfmt.a
+    /opt/fmt/libfmt.a
     -static-libgcc
     -static-libstdc++
 )
