Include previously excluded files. WIP internal upgrade.

--- a/src/Datadog.Trace/Datadog.Trace.csproj
+++ b/src/Datadog.Trace/Datadog.Trace.csproj
@@ -66,4 +66,10 @@
     <DefineConstants>$(DefineConstants);OS_MUTEX</DefineConstants>
   </PropertyGroup>
 
+  <!--StatsdClient-->
+  <!--The StatsdClient uses netstandard1.3, but our equivalent exclusion is net45 -->
+  <PropertyGroup Condition="'$(TargetFramework)' != 'net45' ">
+    <DefineConstants>NAMED_PIPE_AVAILABLE</DefineConstants>
+  </PropertyGroup>
+
 </Project>
