--- a/src/Datadog.Trace/Datadog.Trace.csproj
+++ b/src/Datadog.Trace/Datadog.Trace.csproj
@@ -67,8 +67,8 @@
   </PropertyGroup>
 
   <!--StatsdClient-->
-  <!--The StatsdClient uses netstandard1.3, but our equivalent exclusion is net45 -->
-  <PropertyGroup Condition="'$(TargetFramework)' != 'net45' ">
+  <!--The StatsdClient uses netstandard1.3 to exclude, but builds against net45 -->
+  <PropertyGroup>
     <DefineConstants>$(DefineConstants);NAMED_PIPE_AVAILABLE</DefineConstants>
   </PropertyGroup>
 
