--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -40,17 +40,17 @@ jobs:
     vmImage: $(imageName)
 
   # Enable the Datadog Agent service for this job
-  services:
-    dd_agent: dd_agent
+  #services:
+  #  dd_agent: dd_agent
 
   steps:
 
   # Install the tracer latest stable release to attach the profiler to the build and test steps.
   # The script exposes the required environment variables to the following steps
-  - task: PowerShell@2
-    displayName: Install profiler latest release
-    inputs:
-      filePath: ./.azure-pipelines/setup_tracer.ps1
+  #- task: PowerShell@2
+  #  displayName: Install profiler latest release
+  #  inputs:
+  #    filePath: ./.azure-pipelines/setup_tracer.ps1
 
   - task: UseDotNet@2
     displayName: install dotnet core runtime 2.1
@@ -81,7 +81,7 @@ jobs:
     inputs:
       command: build
       configuration: $(buildConfiguration)
-      arguments: -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
+      #arguments: -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
       projects: |
         src/**/*.csproj
         test/**/*.Tests.csproj
@@ -116,8 +116,8 @@ jobs:
     vmImage: windows-2019
 
   # Enable the Datadog Agent service for this job
-  services:
-    dd_agent: dd_agent
+  #services:
+  #  dd_agent: dd_agent
 
   steps:
 
@@ -142,7 +142,7 @@ jobs:
       projects: |
         src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
         sample-libs/**/Samples.ExampleLibrary*.csproj
-      arguments: -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
+      #arguments: -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
     env:
       DD_SERVICE_NAME: dd-tracer-dotnet-native
 
@@ -161,7 +161,7 @@ jobs:
       solution: Datadog.Trace.proj
       platform: $(buildPlatform)
       configuration: $(buildConfiguration)
-      msbuildArguments: /t:BuildCpp;BuildCppTests /l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
+      msbuildArguments: /t:BuildCpp;BuildCppTests #/l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
       maximumCpuCount: true
     env:
       DD_SERVICE_NAME: dd-tracer-dotnet-native
