--- a/src/Datadog.Trace.DuckTyping/Datadog.Trace.DuckTyping.csproj
+++ b/src/Datadog.Trace.DuckTyping/Datadog.Trace.DuckTyping.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!-- NuGet -->
-    <Version>1.20.1-prerelease</Version>
+    <Version>1.20.2</Version>
     <Title>Datadog APM</Title>
     <Description>DuckType library for Datadog APM</Description>
 
