Configure Await Checker

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -30,5 +30,6 @@
 
     <!-- reference assemblies let us target .NET Framework without the SDK (for example, on non-Windows) -->
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="all" />
+    <PackageReference Include="ConfigureAwaitChecker.Analyzer" Version="4.0.0" PrivateAssets="all" />
   </ItemGroup>
 </Project>
