Disable CIApp temporarily

--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -40,17 +40,17 @@ jobs:
     vmImage: $(imageName)
 
   # Enable the Datadog Agent service for this job
-  services:
-    dd_agent: dd_agent
+  #services:
+  #  dd_agent: dd_agent
 
   steps:
 
   # Install the tracer latest stable release to attach the profiler to the build and test steps.
   # The script exposes the required environment variables to the following steps
-  - task: PowerShell@2
-    displayName: Install profiler latest release
-    inputs:
-      filePath: ./.azure-pipelines/setup_tracer.ps1
+  #- task: PowerShell@2
+  #  displayName: Install profiler latest release
+  #  inputs:
+  #    filePath: ./.azure-pipelines/setup_tracer.ps1
 
   - task: UseDotNet@2
     displayName: install dotnet core runtime 2.1
@@ -81,7 +81,7 @@ jobs:
     inputs:
       command: build
       configuration: $(buildConfiguration)
-      #arguments: -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
+      arguments: -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
       projects: |
         src/**/*.csproj
         test/**/*.Tests.csproj
