--- a/test/test-applications/integrations/dependency-libs/Samples.NoMultiLoader.Deps/Samples.NoMultiLoader.Deps.csproj
+++ b/test/test-applications/integrations/dependency-libs/Samples.NoMultiLoader.Deps/Samples.NoMultiLoader.Deps.csproj
@@ -6,17 +6,12 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   
-  <PropertyGroup>
-    <ApiVersion Condition="'$(ApiVersion)' == ''">4.7.0</ApiVersion>
-  </PropertyGroup>
-
-
   <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
     <Reference Include="System.Data" />
   </ItemGroup>
 
   <ItemGroup Condition="!$(TargetFramework.StartsWith('net4'))">
-    <PackageReference Include="System.Data.SqlClient" Version="$(ApiVersion)" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
