Modify Samples.Owin.WebApi to use new Owin integration

--- a/test/test-applications/integrations/Samples.Owin.WebApi/Samples.Owin.WebApi.csproj
+++ b/test/test-applications/integrations/Samples.Owin.WebApi/Samples.Owin.WebApi.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.OwinSelfHost" Version="5.2.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\src\Datadog.Trace.Owin\Datadog.Trace.Owin.csproj" />
+  </ItemGroup>
+
 </Project>
