Refactor loader logic to a new loader.cpp/loader.h file

--- a/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
+++ b/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
@@ -58,6 +58,7 @@ if (OSX)
         il_rewriter.cpp
         integration_loader.cpp
         integration.cpp
+        loader.cpp
         logging.cpp
         metadata_builder.cpp
         miniutf.cpp
@@ -117,6 +118,7 @@ else()
         il_rewriter.cpp
         integration_loader.cpp
         integration.cpp
+        loader.cpp
         logging.cpp
         metadata_builder.cpp
         miniutf.cpp
