--- a/test/Datadog.Trace.ClrProfiler.Managed.Tests/Datadog.Trace.ClrProfiler.Managed.Tests.csproj
+++ b/test/Datadog.Trace.ClrProfiler.Managed.Tests/Datadog.Trace.ClrProfiler.Managed.Tests.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="4.0.10" />
+    <PackageReference Include="Mysql.Data" Version="8.0.17" />
   </ItemGroup>
 
   <ItemGroup>
