--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -190,11 +190,8 @@ jobs:
         src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
   
   - script: |
-      echo "deb http://llvm.org/apt/bionic/ llvm-toolchain-bionic-3.9 main" | sudo tee /etc/apt/sources.list.d/llvm.list
-      wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
       sudo apt-get update
-      sudo apt-get install -y llvm-3.9 clang-3.9
-      sudo cd /usr/lib/llvm-3.9/lib && ln -s ../../x86_64-linux-gnu/liblldb-3.9.so.1 liblldb-3.9.so.1
+      sudo apt-get install -y llvm clang
       mkdir -p /opt
       sudo chmod -R 777 /opt
       cd /opt && git clone --depth 1 --branch v3.3.0 https://github.com/nlohmann/json.git
@@ -206,9 +203,7 @@ jobs:
 
   - script: |
       cd ./src/Datadog.Trace.ClrProfiler.Native
-      mkdir -p ./obj/Debug/x64
-      cd ./obj/Debug/x64
-      CXX=clang++-3.9 CC=clang-3.9 cmake ../../..
+      cmake
       make
     displayName: build_profiler
 
@@ -250,9 +245,7 @@ jobs:
 
   - script: |
       cd ./src/Datadog.Trace.ClrProfiler.Native
-      mkdir -p ./obj/Debug/x64
-      cd ./obj/Debug/x64
-      cmake ../../.. -DOSX=1
+      cmake
       make
     displayName: build_profiler
 
